# hammerhead-turret-controller

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  htc.ioc
cmake/: gcc-arm-none-eabi.cmake
htc/: CMakeLists.txt  STM32F302XX_FLASH.ld  main.cpp
htc/hal/: CMakeLists.txt
htc/hal/Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
htc/hal/Core/Src/: gpio.c  i2c.c  main.c  spi.c  stm32f3xx_it.c  tim.c  usart.c
kicad/hammerhead_turret_controller/: cm5_and_peripherals.kicad_sch  cm5_gpio.kicad_sch  cm5_high_speed.kicad_sch  coprocessor.kicad_sch  encoders.kicad_sch  fp-info-cache  fp-lib-table  hammerhead_turret_controller.kicad_pcb  hammerhead_turret_controller.kicad_prl  hammerhead_turret_controller.kicad_pro  hammerhead_turret_controller.kicad_sch  imu.kicad_sch  led_controller.kicad_sch  light_controller.kicad_sch  power.kicad_sch  stepper_driver.kicad_sch  stepper_with_encoder.kicad_sch  steppers.kicad_sch  sym-lib-table
